# TensorRT

./: .gitignore  .gitmodules  .nspect-vuln-allowlist.toml  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  LICENSE  Makefile.safe_component  README.md  VERSION  build.sh  requirements.txt
demo/BERT/: CMakeLists.txt  README.md  benchmark-mt.sh  builder.py  builder_utils.py  builder_varseqlen.py  infer.py  inference.py  inference_c.py  inference_varseqlen.py  perf_varseqlen.py
demo/BERT/helpers/: calibrator.py
demo/BERT/infer_c/: bert_infer.h
demo/BERT/scripts/: download_model.sh  inference_benchmark.sh  inference_benchmark_sparsity.sh
demo/HuggingFace/: CHANGELOG.md  README.md  checkpoints.py  general_utils.py  interface.py  models.py  networks.py  polygraphy_utils.py  pyproject.toml  requirements.txt  run.py  utils.py
demo/HuggingFace/BART/: BARTModelConfig.py  BartModelConfig.py  export.py  frameworks.py  hf.py  measurements.py  onnxrt.py  trt.py
demo/HuggingFace/BLOOM/: BLOOMModelConfig.py  checkpoint.toml  trt.py
docker/: build.sh  (+14 more)
plugins/: CMakeLists.txt  InferPlugin.cpp  Makefile  NvPluginFasterRCNN.cu  NvPluginFasterRCNN.h  NvPluginSSD.cu  NvPluginSSD.h  allClassNMS.cu  batchedNMSInference.cu  batchedNMSPlugin.cpp  batchedNMSPlugin.h  bboxDeltas2Proposals.cu  checkMacrosPlugin.cpp  checkMacrosPlugin.h  clip.cu  clip.h  clipPlugin.cpp  clipPlugin.h  common.cu  decodeBBoxes.cu  detectionForward.cu  exports.map  extractFgScores.cu  flattenConcat.cpp  flattenConcat.h  gatherNMSOutputs.cu  gatherTopDetections.cu  generateAnchors.cu  gridAnchorPlugin.cpp  gridAnchorPlugin.h  lReLU.cu  lReluPlugin.cpp  lReluPlugin.h  makefile-plugin.nvmk  nmsHelper.cpp  nmsLayer.cu  nmsPlugin.cpp  nmsPlugin.h  normalizeLayer.cu  normalizePlugin.cpp  (+31 more)
samples/: CMakeLists.txt  CMakeSamplesTemplate.txt  Makefile  Makefile.config  README.md  makefile-samples.nvmk  makefile.nvmk
samples/common/: BatchStream.h  EntropyCalibrator.h  ErrorRecorder.h  argsParser.h  bfloat16.cpp  bfloat16.h  buffers.h  common.h  half.h  logger.h  logging.h  parserOnnxConfig.h  safeCommon.h  sampleConfig.h  sampleDevice.h  sampleEngines.cpp  sampleEngines.h  sampleInference.cpp  sampleInference.h  sampleOptions.cpp  sampleOptions.h  sampleReporting.cpp  sampleReporting.h  sampleUtils.cpp  sampleUtils.h  streamReader.h
samples/opensource/: CMakeLists.txt  Makefile  Makefile.config  makefile-samples.nvmk
samples/python/: common.py  common_runtime.py  downloader.py
samples/sampleAV/: Makefile  README.md  batchPrepare.py  runSampleAV.sh  sampleAV.cpp
samples/sampleAlgorithmSelector/: CMakeLists.txt  README.md  sampleAlgorithmSelector.cpp
samples/sampleBigLSTM/: Makefile  README.md  bind_data.cpp  bind_data.h  data_utils.cpp  data_utils.h  error_util.h  makefile-sampleBigLSTM.nvmk  params.cpp  params.h  profiler.h  sampleBigLSTM.cpp  type_utils.h  weight_utils.cpp  weight_utils.h
samples/sampleCharRNN/: CMakeLists.txt  README.md  sampleCharRNN.cpp
samples/sampleDynamicReshape/: sampleDynamicReshape.cpp
samples/sampleFasterRCNN/: CMakeLists.txt  README.md  sampleFasterRCNN.cpp
samples/sampleGoogleNet/: CMakeLists.txt  makefile-sampleGoogleNet.nvmk  sampleGoogleNet.cpp  sample_googlenet.vcxproj
samples/sampleINT8/: CMakeLists.txt  README.md  sampleINT8.cpp  sample_int8.vcxproj
samples/sampleINT8API/: CMakeLists.txt  README.md  sampleINT8API.cpp
samples/sampleIOFormats/: CMakeLists.txt  sampleIOFormats.cpp
samples/sampleMLP/: CMakeLists.txt  README.md  sampleMLP.cpp  sample_mlp.vcxproj
samples/sampleMNIST/: CMakeLists.txt  makefile-sampleMNIST.nvmk  sampleMNIST.cpp  sample_mnist.vcxproj
samples/sampleMNISTAPI/: CMakeLists.txt  sampleMNISTAPI.cpp
samples/sampleMovieLens/: CMakeLists.txt  README.md  sampleMovieLens.cpp
samples/sampleMovieLensMPS/: CMakeLists.txt  README.md  sampleMovieLensMPS.cpp
samples/sampleNMT/: CMakeLists.txt  makefile-sampleNMT.nvmk  sampleNMT.cpp  sample_nmt.vcxproj
samples/sampleNamedDimensions/: sampleNamedDimensions.cpp
samples/sampleONNX/: BatchStream.h  Int8EntropyCalibrator.h  Makefile  makefile-sampleONNX.nvmk  ppm_utils.h  readme.md  sampleONNX.cpp  sampleONNX.h
samples/sampleOnnxMNIST/: CMakeLists.txt  sampleOnnxMNIST.cpp  sample_onnx_mnist.vcxproj
samples/sampleOnnxMnistCoordConvAC/: README.md  mnist_coord_conv_train.py  sampleOnnxMnistCoordConvAC.cpp
samples/samplePlugin/: CMakeLists.txt  fcPlugin.h  samplePlugin.cpp
samples/samplePointPillars/: CMakeLists.txt  README.md  samplePointPillars.cpp
samples/sampleProgressMonitor/: sampleProgressMonitor.cpp
samples/sampleRNNPerf/: Makefile  makefile-sampleRNNPerf.nvmk  sampleRNNPerf.cpp
samples/sampleRNNv2/: Makefile  README.md  makefile-sampleRNNv2.nvmk  sampleRNNv2.cpp
samples/sampleReformatFreeIO/: CMakeLists.txt  README.md  sampleReformatFreeIO.cpp
samples/sampleSSD/: CMakeLists.txt  batchPrepare.py  sampleSSD.cpp  sample_ssd.vcxproj
samples/sampleSerialization/: Makefile  README.md  sampleParseArgs.h  sampleSerialization.cpp
samples/sampleUff/: Makefile  makefile-sampleUff.nvmk  sampleUff.cpp
samples/sampleUffFasterRCNN/: sampleUffFasterRCNN.cpp
samples/sampleUffMNIST/: CMakeLists.txt  makefile-sampleUffMNIST.nvmk  sampleUffMNIST.cpp
samples/sampleUffPlugin/: Makefile  makefile-sampleUffPlugin.nvmk  sampleUffPlugin.cpp
samples/sampleUffPluginV2Ext/: CMakeLists.txt  makefile-sampleUffPluginV2Ext.nvmk  sampleUffPluginV2Ext.cpp
samples/sampleUffSSD/: CMakeLists.txt  README.md  makefile-sampleUffSSD.nvmk  sampleUffSSD.cpp
samples/sampleYOLO/: Calibrator.h  Makefile  PrepareINT8CalibrationBatches.sh  README.md  batchPrepare.py  factoryYOLO.h  makefile-sampleYOLO.nvmk  sampleYOLO.cpp  sample_yolo.sln  sample_yolo.vcxproj
samples/sampleYOLOv2/: Makefile  README.md  batchPrepare.py  factoryYOLOv2.h  makefile-sampleYOLOv2.nvmk  prepareCaffeModel.sh  prepareINT8CalibrationBatches.sh  sampleYOLOv2.cpp  sample_yolov2.sln  sample_yolov2.vcxproj
samples/trtexec/: CMakeLists.txt  README.md  makefile-trtexec.nvmk  trtexec.cpp  trtexec.vcxproj
samples/utils/: timingCache.cpp
(+931 files in other folders)
